--- a/projects.html
+++ b/projects.html
@@ -6,8 +6,8 @@
   <title>Projects | Marcos Solomon</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    /* Reset and Base Styles */
-    * {
+    /* Base Reset */
+    *, *::before, *::after {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
@@ -20,50 +20,48 @@
       line-height: 1.6;
     }
 
-    /* Navbar */
-    .navbar {
+    nav.navbar {
       background-color: #222;
       padding: 1.5rem 0;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
 
-    .navbar ul {
-      list-style: none;
+    nav ul {
       display: flex;
       justify-content: center;
-      flex-wrap: wrap;
+      list-style: none;
       gap: 2rem;
+      flex-wrap: wrap;
     }
 
-    .navbar ul li a {
+    nav a {
       color: #eee;
       text-decoration: none;
       padding: 0.75rem 1.2rem;
       font-size: 1.1rem;
       font-weight: 600;
-      transition: all 0.3s ease;
+      transition: 0.3s ease;
     }
 
-    .navbar ul li a:hover,
-    .navbar ul li a.active {
+    nav a:hover,
+    nav a.active {
       background-color: #00bcd4;
       color: #fff;
       border-radius: 6px;
     }
 
-    /* Section Layout */
     .section {
       max-width: 1100px;
       margin: 2rem auto;
-      padding: 1rem 2rem;
+      padding: 1.5rem 2rem;
       background: #fff;
       border-radius: 10px;
       box-shadow: 0 3px 8px rgba(0,0,0,0.05);
     }
 
     .section h2 {
-      font-size: 2rem;
       text-align: center;
+      font-size: 2rem;
       color: #00bcd4;
       margin-bottom: 2rem;
       border-bottom: 2px solid #00bcd4;
@@ -72,40 +70,31 @@
     }
 
     .project {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
       background-color: #fafafa;
       padding: 1.5rem;
-      border-radius: 10px;
       margin-bottom: 2rem;
+      border-radius: 10px;
+      text-align: center;
       box-shadow: 0 2px 5px rgba(0,0,0,0.05);
     }
 
     .project img {
       max-width: 100%;
-      height: auto;
       border-radius: 8px;
       margin-bottom: 1rem;
     }
 
     .project h4 {
-      font-size: 1.5rem;
       color: #007acc;
+      font-size: 1.5rem;
       margin-bottom: 0.5rem;
-    }
-
-    .project p {
-      font-size: 1rem;
-      margin-bottom: 1rem;
     }
 
     .btn-group {
       display: flex;
+      justify-content: center;
       gap: 1rem;
       flex-wrap: wrap;
-      justify-content: center;
     }
 
     .btn {
@@ -113,10 +102,10 @@
       padding: 0.6rem 1.4rem;
       font-size: 0.95rem;
       font-weight: 600;
-      text-decoration: none;
       border-radius: 6px;
+      text-decoration: none;
+      color: #fff;
       transition: background 0.3s ease;
-      color: white;
     }
 
     .btn.github {
@@ -136,26 +125,21 @@
     }
 
     @media (max-width: 768px) {
-      .navbar ul {
+      nav ul {
         flex-direction: column;
         gap: 1rem;
       }
 
-      .project {
-        padding: 1rem;
-      }
-
       .btn {
         width: 100%;
-        text-align: center;
       }
     }
   </style>
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar">
+  <!-- Navigation -->
+  <nav class="navbar" aria-label="Main Navigation">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="resume.html">Resume</a></li>
@@ -165,57 +149,55 @@
     </ul>
   </nav>
 
-  <!-- Projects Section -->
-  <section id="projects" class="section">
+  <!-- Main Content -->
+  <main id="projects" class="section">
     <h2>Projects</h2>
 
-    <!-- GitHub Repositories -->
-    <div class="project">
-      <img src="images/project1.png" alt="Hospital DSS" />
+    <article class="project">
+      <img src="images/project1.png" alt="Hospital DSS Screenshot" />
       <h4>Hospital DSS</h4>
       <p>A hospital decision support system built with Django, React, and MySQL.</p>
       <div class="btn-group">
-        <a href="https://github.com/marcos-solo/hosi_dss" class="btn github" target="_blank">View on GitHub</a>
+        <a href="https://github.com/marcos-solo/hosi_dss" class="btn github" target="_blank" rel="noopener noreferrer">View on GitHub</a>
       </div>
-    </div>
+    </article>
 
-    <div class="project">
+    <article class="project">
       <img src="images/project2.png" alt="Tea Harvester Weather Checker" />
       <h4>Tea Harvester Weather Checker</h4>
       <p>A weather-checker tool built with Django to assist tea farmers.</p>
       <div class="btn-group">
-        <a href="https://github.com/marcos-solo/tea_harvester_weather-checker" class="btn github" target="_blank">View on GitHub</a>
+        <a href="https://github.com/marcos-solo/tea_harvester_weather-checker" class="btn github" target="_blank" rel="noopener noreferrer">View on GitHub</a>
       </div>
-    </div>
+    </article>
 
-    <!-- Tested Systems -->
-    <div class="project">
-      <img src="images/project3.png" alt="Bethsaida Main" />
-      <h4>Shop manager</h4>
+    <article class="project">
+      <img src="images/project3.png" alt="Bethsaida Shop Manager Screenshot" />
+      <h4>Shop Manager</h4>
       <p>Performed penetration testing on the shop management primary domain.</p>
       <div class="btn-group">
-        <a href="https://ho.bethsaidamedicareinstitute.co.ke" class="btn site" target="_blank">View Site</a>
+        <a href="https://ho.bethsaidamedicareinstitute.co.ke" class="btn site" target="_blank" rel="noopener noreferrer">View Site</a>
       </div>
-    </div>
+    </article>
 
-    <div class="project">
-      <img src="images/project4.png" alt="Sofsrea" />
+    <article class="project">
+      <img src="images/project4.png" alt="Sofsrea Portal Screenshot" />
       <h4>Sofsrea Portal</h4>
       <p>Security assessment and penetration testing of the Sofsrea branch system.</p>
       <div class="btn-group">
-        <a href="https://sofsrea.bethsaidamedicareinstitute.co.ke" class="btn site" target="_blank">View Site</a>
+        <a href="https://sofsrea.bethsaidamedicareinstitute.co.ke" class="btn site" target="_blank" rel="noopener noreferrer">View Site</a>
       </div>
-    </div>
+    </article>
 
-    <div class="project">
-      <img src="images/project5.png" alt="WebSeal Memba" />
+    <article class="project">
+      <img src="images/project5.png" alt="WebSeal Memba Portal Screenshot" />
       <h4>WebSeal Memba</h4>
       <p>Penetration testing on WebSeal International Memba portal.</p>
       <div class="btn-group">
-        <a href="https://memba.websealinternational.com" class="btn site" target="_blank">View Site</a>
+        <a href="https://memba.websealinternational.com" class="btn site" target="_blank" rel="noopener noreferrer">View Site</a>
       </div>
-    </div>
-  </section>
+    </article>
+  </main>
 
 </body>
 </html>
