--- a/projects.html
+++ b/projects.html
@@ -6,8 +6,7 @@
   <title>Projects | Marcos Solomon</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    /* Base Reset */
-    *, *::before, *::after {
+    * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
@@ -15,53 +14,53 @@
 
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f4f4f9;
-      color: #333;
+      background-color: #121212;
+      color: #e0e0e0;
       line-height: 1.6;
     }
 
-    nav.navbar {
-      background-color: #222;
+    .navbar {
+      background-color: #1f1f1f;
       padding: 1.5rem 0;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.6);
     }
 
-    nav ul {
+    .navbar ul {
+      list-style: none;
       display: flex;
       justify-content: center;
-      list-style: none;
-      gap: 2rem;
       flex-wrap: wrap;
+      gap: 2rem;
     }
 
-    nav a {
-      color: #eee;
+    .navbar ul li a {
+      color: #ccc;
       text-decoration: none;
       padding: 0.75rem 1.2rem;
       font-size: 1.1rem;
       font-weight: 600;
-      transition: 0.3s ease;
+      transition: all 0.3s ease;
     }
 
-    nav a:hover,
-    nav a.active {
+    .navbar ul li a:hover,
+    .navbar ul li a.active {
       background-color: #00bcd4;
-      color: #fff;
+      color: #000;
       border-radius: 6px;
     }
 
     .section {
       max-width: 1100px;
       margin: 2rem auto;
-      padding: 1.5rem 2rem;
-      background: #fff;
+      padding: 1rem 2rem;
+      background: #1e1e1e;
       border-radius: 10px;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.05);
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
     }
 
     .section h2 {
-      text-align: center;
       font-size: 2rem;
+      text-align: center;
       color: #00bcd4;
       margin-bottom: 2rem;
       border-bottom: 2px solid #00bcd4;
@@ -70,31 +69,41 @@
     }
 
     .project {
-      background-color: #fafafa;
-      padding: 1.5rem;
-      margin-bottom: 2rem;
-      border-radius: 10px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       text-align: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+      background-color: #232323;
+      padding: 1.5rem;
+      border-radius: 10px;
+      margin-bottom: 2rem;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.5);
     }
 
     .project img {
       max-width: 100%;
+      height: auto;
       border-radius: 8px;
       margin-bottom: 1rem;
     }
 
     .project h4 {
-      color: #007acc;
       font-size: 1.5rem;
+      color: #00bcd4;
       margin-bottom: 0.5rem;
+    }
+
+    .project p {
+      font-size: 1rem;
+      margin-bottom: 1rem;
+      color: #ccc;
     }
 
     .btn-group {
       display: flex;
-      justify-content: center;
       gap: 1rem;
       flex-wrap: wrap;
+      justify-content: center;
     }
 
     .btn {
@@ -102,10 +111,10 @@
       padding: 0.6rem 1.4rem;
       font-size: 0.95rem;
       font-weight: 600;
-      border-radius: 6px;
       text-decoration: none;
-      color: #fff;
+      border-radius: 6px;
       transition: background 0.3s ease;
+      color: white;
     }
 
     .btn.github {
@@ -118,28 +127,35 @@
 
     .btn.site {
       background-color: #00bcd4;
+      color: #000;
     }
 
     .btn.site:hover {
       background-color: #0097a7;
+      color: #fff;
     }
 
     @media (max-width: 768px) {
-      nav ul {
+      .navbar ul {
         flex-direction: column;
         gap: 1rem;
       }
 
+      .project {
+        padding: 1rem;
+      }
+
       .btn {
         width: 100%;
+        text-align: center;
       }
     }
   </style>
 </head>
 <body>
 
-  <!-- Navigation -->
-  <nav class="navbar" aria-label="Main Navigation">
+  <!-- Navbar -->
+  <nav class="navbar">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="resume.html">Resume</a></li>
@@ -149,55 +165,55 @@
     </ul>
   </nav>
 
-  <!-- Main Content -->
-  <main id="projects" class="section">
+  <!-- Projects Section -->
+  <section id="projects" class="section">
     <h2>Projects</h2>
 
-    <article class="project">
-      <img src="images/project1.png" alt="Hospital DSS Screenshot" />
+    <div class="project">
+      <img src="images/project1.png" alt="Hospital DSS" />
       <h4>Hospital DSS</h4>
       <p>A hospital decision support system built with Django, React, and MySQL.</p>
       <div class="btn-group">
-        <a href="https://github.com/marcos-solo/hosi_dss" class="btn github" target="_blank" rel="noopener noreferrer">View on GitHub</a>
+        <a href="https://github.com/marcos-solo/hosi_dss" class="btn github" target="_blank">View on GitHub</a>
       </div>
-    </article>
+    </div>
 
-    <article class="project">
+    <div class="project">
       <img src="images/project2.png" alt="Tea Harvester Weather Checker" />
       <h4>Tea Harvester Weather Checker</h4>
       <p>A weather-checker tool built with Django to assist tea farmers.</p>
       <div class="btn-group">
-        <a href="https://github.com/marcos-solo/tea_harvester_weather-checker" class="btn github" target="_blank" rel="noopener noreferrer">View on GitHub</a>
+        <a href="https://github.com/marcos-solo/tea_harvester_weather-checker" class="btn github" target="_blank">View on GitHub</a>
       </div>
-    </article>
+    </div>
 
-    <article class="project">
-      <img src="images/project3.png" alt="Bethsaida Shop Manager Screenshot" />
-      <h4>Shop Manager</h4>
+    <div class="project">
+      <img src="images/project3.png" alt="Bethsaida Main" />
+      <h4>Shop manager</h4>
       <p>Performed penetration testing on the shop management primary domain.</p>
       <div class="btn-group">
-        <a href="https://ho.bethsaidamedicareinstitute.co.ke" class="btn site" target="_blank" rel="noopener noreferrer">View Site</a>
+        <a href="https://ho.bethsaidamedicareinstitute.co.ke" class="btn site" target="_blank">View Site</a>
       </div>
-    </article>
+    </div>
 
-    <article class="project">
-      <img src="images/project4.png" alt="Sofsrea Portal Screenshot" />
+    <div class="project">
+      <img src="images/project4.png" alt="Sofsrea" />
       <h4>Sofsrea Portal</h4>
       <p>Security assessment and penetration testing of the Sofsrea branch system.</p>
       <div class="btn-group">
-        <a href="https://sofsrea.bethsaidamedicareinstitute.co.ke" class="btn site" target="_blank" rel="noopener noreferrer">View Site</a>
+        <a href="https://sofsrea.bethsaidamedicareinstitute.co.ke" class="btn site" target="_blank">View Site</a>
       </div>
-    </article>
+    </div>
 
-    <article class="project">
-      <img src="images/project5.png" alt="WebSeal Memba Portal Screenshot" />
+    <div class="project">
+      <img src="images/project5.png" alt="WebSeal Memba" />
       <h4>WebSeal Memba</h4>
       <p>Penetration testing on WebSeal International Memba portal.</p>
       <div class="btn-group">
-        <a href="https://memba.websealinternational.com" class="btn site" target="_blank" rel="noopener noreferrer">View Site</a>
+        <a href="https://memba.websealinternational.com" class="btn site" target="_blank">View Site</a>
       </div>
-    </article>
-  </main>
+    </div>
+  </section>
 
 </body>
 </html>
