--- a/projects.html
+++ b/projects.html
@@ -50,15 +50,15 @@
     }
 
     .section {
-      max-width: 1100px;
+      max-width: 1000px;
       margin: 2rem auto;
-      padding: 1rem 2rem;
+      padding: 2rem;
       background: #1e1e1e;
       border-radius: 10px;
       box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
     }
 
-    .section h2 {
+    h2 {
       font-size: 2rem;
       text-align: center;
       color: #00bcd4;
@@ -68,86 +68,50 @@
       padding-bottom: 0.4rem;
     }
 
-    .project {
+    .project-list {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      text-align: center;
+      gap: 2rem;
+    }
+
+    .project-item {
       background-color: #232323;
       padding: 1.5rem;
       border-radius: 10px;
-      margin-bottom: 2rem;
       box-shadow: 0 2px 5px rgba(0,0,0,0.5);
     }
 
-    .project img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 8px;
-      margin-bottom: 1rem;
-    }
-
-    .project h4 {
+    .project-item h3 {
       font-size: 1.5rem;
       color: #00bcd4;
       margin-bottom: 0.5rem;
     }
 
-    .project p {
-      font-size: 1rem;
-      margin-bottom: 1rem;
+    .project-item p {
       color: #ccc;
+      margin-bottom: 0.75rem;
     }
 
-    .btn-group {
-      display: flex;
-      gap: 1rem;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    .btn {
+    .project-item a {
       display: inline-block;
-      padding: 0.6rem 1.4rem;
-      font-size: 0.95rem;
-      font-weight: 600;
-      text-decoration: none;
-      border-radius: 6px;
-      transition: background 0.3s ease;
-      color: white;
-    }
-
-    .btn.github {
-      background-color: #333;
-    }
-
-    .btn.github:hover {
-      background-color: #000;
-    }
-
-    .btn.site {
+      margin-top: 0.5rem;
+      padding: 0.5rem 1rem;
+      border-radius: 5px;
       background-color: #00bcd4;
       color: #000;
+      font-weight: bold;
+      text-decoration: none;
+      transition: 0.3s ease;
     }
 
-    .btn.site:hover {
+    .project-item a:hover {
       background-color: #0097a7;
       color: #fff;
     }
 
     @media (max-width: 768px) {
-      .navbar ul {
-        flex-direction: column;
-        gap: 1rem;
-      }
-
-      .project {
+      .section {
         padding: 1rem;
-      }
-
-      .btn {
-        width: 100%;
-        text-align: center;
       }
     }
   </style>
@@ -166,52 +130,41 @@
   </nav>
 
   <!-- Projects Section -->
-  <section id="projects" class="section">
+  <section class="section">
     <h2>Projects</h2>
 
-    <div class="project">
-      <img src="images/project1.png" alt="Hospital DSS" />
-      <h4>Hospital DSS</h4>
-      <p>A hospital decision support system built with Django, React, and MySQL.</p>
-      <div class="btn-group">
-        <a href="https://github.com/marcos-solo/hosi_dss" class="btn github" target="_blank">View on GitHub</a>
-      </div>
-    </div>
+    <div class="project-list">
 
-    <div class="project">
-      <img src="images/project2.png" alt="Tea Harvester Weather Checker" />
-      <h4>Tea Harvester Weather Checker</h4>
-      <p>A weather-checker tool built with Django to assist tea farmers.</p>
-      <div class="btn-group">
-        <a href="https://github.com/marcos-solo/tea_harvester_weather-checker" class="btn github" target="_blank">View on GitHub</a>
+      <div class="project-item">
+        <h3>Hospital DSS</h3>
+        <p>A hospital decision support system built with Django, React, and MySQL.</p>
+        <a href="https://github.com/marcos-solo/hosi_dss" target="_blank">View on GitHub</a>
       </div>
-    </div>
 
-    <div class="project">
-      <img src="images/project3.png" alt="Bethsaida Main" />
-      <h4>Shop manager</h4>
-      <p>Performed penetration testing on the shop management primary domain.</p>
-      <div class="btn-group">
-        <a href="https://ho.bethsaidamedicareinstitute.co.ke" class="btn site" target="_blank">View Site</a>
+      <div class="project-item">
+        <h3>Tea Harvester Weather Checker</h3>
+        <p>A weather-checker tool built with Django to assist tea farmers with real-time forecasts.</p>
+        <a href="https://github.com/marcos-solo/tea_harvester_weather-checker" target="_blank">View on GitHub</a>
       </div>
-    </div>
 
-    <div class="project">
-      <img src="images/project4.png" alt="Sofsrea" />
-      <h4>Sofsrea Portal</h4>
-      <p>Security assessment and penetration testing of the Sofsrea branch system.</p>
-      <div class="btn-group">
-        <a href="https://sofsrea.bethsaidamedicareinstitute.co.ke" class="btn site" target="_blank">View Site</a>
+      <div class="project-item">
+        <h3>Shop Manager</h3>
+        <p>Performed penetration testing on the shop management primary domain.</p>
+        <a href="https://ho.bethsaidamedicareinstitute.co.ke" target="_blank">View Site</a>
       </div>
-    </div>
 
-    <div class="project">
-      <img src="images/project5.png" alt="WebSeal Memba" />
-      <h4>WebSeal Memba</h4>
-      <p>Penetration testing on WebSeal International Memba portal.</p>
-      <div class="btn-group">
-        <a href="https://memba.websealinternational.com" class="btn site" target="_blank">View Site</a>
+      <div class="project-item">
+        <h3>Sofsrea Portal</h3>
+        <p>Security assessment and penetration testing of the Sofsrea branch system.</p>
+        <a href="https://sofsrea.bethsaidamedicareinstitute.co.ke" target="_blank">View Site</a>
       </div>
+
+      <div class="project-item">
+        <h3>WebSeal Memba</h3>
+        <p>Penetration testing on WebSeal International Memba portal.</p>
+        <a href="https://memba.websealinternational.com" target="_blank">View Site</a>
+      </div>
+
     </div>
   </section>
 
