--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Projects | Marcos Solomon</title>
+
+  <!-- Font Awesome for icons -->
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
   <!-- Styles -->
   <style>
     body {
@@ -29,6 +33,8 @@
       list-style: none;
       display: flex;
       gap: 1.5rem;
+      padding: 0;
+      margin: 0;
     }
 
     .navbar a {
@@ -38,11 +44,12 @@
     }
 
     .navbar a:hover,
-    .navbar a.active {
+    .navbar a.active,
+    .navbar a[aria-current="page"] {
       color: #00ffaa;
     }
 
-    .section {
+    main.section {
       padding: 3rem 2rem;
       max-width: 800px;
       margin: auto;
@@ -72,25 +79,26 @@
       color: #fff;
     }
 
-    .download-btn {
+    .project-item {
+      margin-bottom: 2rem;
+      border-bottom: 1px solid #222;
+      padding-bottom: 1rem;
+    }
+
+    .project-item a {
       display: inline-block;
-      background-color: #00ffaa;
-      color: #000;
-      font-weight: bold;
-      padding: 0.7rem 1.5rem;
-      border-radius: 25px;
-      text-decoration: none;
-      margin: 1rem 0 2rem;
-      transition: background-color 0.3s ease;
-    }
-
-    .download-btn:hover {
-      background-color: #00ddaa;
-    }
-
-    .fa-shield-alt, .fa-globe {
+      margin-top: 0.5rem;
       color: #00ffaa;
-      margin-right: 0.5rem;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    .project-item a:hover {
+      color: #00ddaa;
+    }
+
+    .project-item i {
+      margin-right: 0.4rem;
     }
 
     @media (max-width: 768px) {
@@ -109,54 +117,69 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar">
+  <nav class="navbar" role="navigation" aria-label="Main Navigation">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="resume.html">Resume</a></li>
-      <li><a href="projects.html" class="active">Projects</a></li>
+      <li><a href="projects.html" class="active" aria-current="page">Projects</a></li>
       <li><a href="labs.html">Lab Challenges</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
   <!-- Projects Section -->
-  <section class="section">
+  <main class="section">
     <h2>Projects</h2>
 
     <div class="project-list">
 
-      <div class="project-item">
-        <h3>Hospital DSS</h3>
+      <article class="project-item">
+        <h3><i class="fas fa-hospital"></i>Hospital DSS</h3>
         <p>A hospital decision support system built with Django, React, and MySQL.</p>
-        <a href="https://github.com/marcos-solo/hosi_dss" target="_blank">View on GitHub</a>
-      </div>
+        <p><strong>Tech Stack:</strong> Django, React, MySQL</p>
+        <a href="https://github.com/marcos-solo/hosi_dss" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-github"></i>View on GitHub
+        </a>
+      </article>
 
-      <div class="project-item">
-        <h3>Tea Harvester Weather Checker</h3>
+      <article class="project-item">
+        <h3><i class="fas fa-cloud-sun"></i>Tea Harvester Weather Checker</h3>
         <p>A weather-checker tool built with Django to assist tea farmers with real-time forecasts.</p>
-        <a href="https://github.com/marcos-solo/tea_harvester_weather-checker" target="_blank">View on GitHub</a>
-      </div>
+        <p><strong>Tech Stack:</strong> Django, OpenWeather API</p>
+        <a href="https://github.com/marcos-solo/tea_harvester_weather-checker" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-github"></i>View on GitHub
+        </a>
+      </article>
 
-      <div class="project-item">
-        <h3>Shop Manager</h3>
+      <article class="project-item">
+        <h3><i class="fas fa-store"></i>Shop Manager</h3>
         <p>Performed penetration testing on the shop management primary domain.</p>
-        <a href="https://ho.bethsaidamedicareinstitute.co.ke" target="_blank">View Site</a>
-      </div>
+        <p><strong>Tools Used:</strong> OWASP ZAP, Burp Suite, Nmap</p>
+        <a href="https://ho.bethsaidamedicareinstitute.co.ke" target="_blank" rel="noopener noreferrer">
+          <i class="fas fa-globe"></i>View Site
+        </a>
+      </article>
 
-      <div class="project-item">
-        <h3>Sofsrea Portal</h3>
+      <article class="project-item">
+        <h3><i class="fas fa-network-wired"></i>Sofsrea Portal</h3>
         <p>Security assessment and penetration testing of the Sofsrea branch system.</p>
-        <a href="https://sofsrea.bethsaidamedicareinstitute.co.ke" target="_blank">View Site</a>
-      </div>
+        <p><strong>Focus:</strong> Auth Bypass, SQL Injection, Subdomain Enumeration</p>
+        <a href="https://sofsrea.bethsaidamedicareinstitute.co.ke" target="_blank" rel="noopener noreferrer">
+          <i class="fas fa-globe"></i>View Site
+        </a>
+      </article>
 
-      <div class="project-item">
-        <h3>WebSeal Memba</h3>
+      <article class="project-item">
+        <h3><i class="fas fa-shield-alt"></i>WebSeal Memba</h3>
         <p>Penetration testing on WebSeal International Memba portal.</p>
-        <a href="https://memba.websealinternational.com" target="_blank">View Site</a>
-      </div>
+        <p><strong>Focus:</strong> Broken Authentication, Session Hijacking, XSS</p>
+        <a href="https://memba.websealinternational.com" target="_blank" rel="noopener noreferrer">
+          <i class="fas fa-globe"></i>View Site
+        </a>
+      </article>
 
     </div>
-  </section>
+  </main>
 
 </body>
 </html>
