--- a/contact.html
+++ b/contact.html
@@ -4,53 +4,38 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact | Marcos Solomon</title>
-  <link rel="stylesheet" href="style.css" />
-
-  <style>
-    /* Additional Styling Specific to Contact Page */
-    #contact {
-      text-align: center;
-      font-size: 1.1rem;
-      padding: 2rem;
-    }
-
-    #contact a {
-      color: #00bcd4;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    #contact a:hover {
-      text-decoration: underline;
-      color: #0097a7;
-    }
-
-    #contact p {
-      margin: 0.8rem 0;
-    }
-  </style>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-gray-50 text-gray-800 font-sans">
 
   <!-- Navbar -->
-  <nav class="navbar">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="resume.html">Resume</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="labs.html">Lab Challenges</a></li>
-      <li><a href="contact.html" class="active">Contact</a></li>
-    </ul>
+  <nav class="bg-white shadow-md">
+    <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
+      <ul class="flex space-x-6">
+        <li><a href="index.html" class="hover:text-blue-600">Home</a></li>
+        <li><a href="resume.html" class="hover:text-blue-600">Resume</a></li>
+        <li><a href="projects.html" class="hover:text-blue-600">Projects</a></li>
+        <li><a href="labs.html" class="hover:text-blue-600">Lab Challenges</a></li>
+        <li><a href="contact.html" class="text-blue-600 font-semibold">Contact</a></li>
+      </ul>
+    </div>
   </nav>
 
   <!-- Contact Section -->
-  <section id="contact" class="section">
-    <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:solomonmarcos34@gmail.com">solomonmarcos34@gmail.com</a></p>
-    <p>Phone: +254 0741840839</p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/janedoe" target="_blank">linkedin.com/in/janedoe</a></p>
-    <p>GitHub: <a href="https://github.com/marcos-solo" target="_blank">github.com/marcos-solo</a></p>
+  <section id="contact" class="max-w-4xl mx-auto px-4 py-16">
+    <h2 class="text-3xl font-bold mb-6 text-center text-blue-700">Contact Me</h2>
+    <div class="space-y-4 text-lg text-gray-700">
+      <p><strong>Email:</strong> <a href="mailto:solomonmarcos34@gmail.com" class="text-blue-600 hover:underline">solomonmarcos34@gmail.com</a></p>
+      <p><strong>Phone:</strong> <span class="text-gray-800">+254 0741840839</span></p>
+      <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/janedoe" target="_blank" class="text-blue-600 hover:underline">linkedin.com/in/janedoe</a></p>
+      <p><strong>GitHub:</strong> <a href="https://github.com/marcos-solo" target="_blank" class="text-blue-600 hover:underline">github.com/marcos-solo</a></p>
+    </div>
   </section>
+
+  <!-- Footer -->
+  <footer class="bg-white text-center py-4 border-t mt-8">
+    <p class="text-sm text-gray-600">&copy; 2025 Marcos Solomon. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
