--- a/labs.html
+++ b/labs.html
@@ -188,8 +188,8 @@
       </article>
 
       <article class="lab">
-        <h4><i class="fas fa-user-shield"></i> Privilege Escalation (1)</h4>
-        <p><strong>Summary:</strong> Escalated privileges through misconfigured sudo access</p>
+        <h4><i class="fas fa-user-shield"></i> Pawned the Meow Machine</h4>
+        <p><strong>Summary:</strong> connected FTP, SMB, Telnet, Rsync and RDP anonymously. Use Nmap to identify open ports. connected to a MongoDB server.</p>
         <div class="lab-images">
           <img src="https://marcos-solo.github.io/images/screen6.png" alt="Privilege Escalation Screenshot 1" />
         </div>
