--- a/labs.html
+++ b/labs.html
@@ -183,7 +183,7 @@
         <h4><i class="fas fa-user-secret"></i> Broken Authentication Exploit</h4>
         <p><strong>Summary:</strong> Gained unauthorized access using session ID manipulation</p>
         <div class="lab-images">
-          <img src="https://marcos-solo.github.io/images/screen5.png" alt="Broken Authentication Screenshot" />
+          <img src="https://marcos-solo.github.io/images/screen5.png" alt="Broken Authentication Screenshot" />         
         </div>
       </article>
 
@@ -191,7 +191,10 @@
         <h4><i class="fas fa-user-shield"></i> Pawned the Meow Machine</h4>
         <p><strong>Summary:</strong> connected FTP, SMB, Telnet, Rsync and RDP anonymously. Use Nmap to identify open ports. connected to a MongoDB server.</p>
         <div class="lab-images">
-          <img src="https://marcos-solo.github.io/images/screen6.png" alt="Privilege Escalation Screenshot 1" />
+          <img src="https://marcos-solo.github.io/images/screen6.png" alt="Privilege Escalation Screenshot 1" /><br>
+          <img src="https://marcos-solo.github.io/images/screen5.png" alt="Broken Authentication Screenshot" />  <br>
+          <img src="https://marcos-solo.github.io/images/screen6a.png" alt="Privilege Escalation Screenshot 2" /><br>
+          <img src="https://marcos-solo.github.io/images/screen3.png" alt="Command Injection Screenshot" />
         </div>
       </article>
 
