--- a/labs.html
+++ b/labs.html
@@ -164,37 +164,35 @@
       </article>
 
       <article class="lab">
-        <h4><i class="fas fa-terminal"></i> Command Injection</h4>
-        <p><strong>Summary:</strong> Executed OS commands via unsanitized input fields</p>
+        <h4><i class="fas fa-terminal"></i> Pawned Fawn Machine On Hackthebox</h4>
+        <p><strong>Summary:</strong> connected FTP, SMB, Telnet, Rsync and RDP anonymously. Use Nmap to identify open ports. connected to a MongoDB server.</p>
         <div class="lab-images">
           <img src="https://marcos-solo.github.io/images/screen3.png" alt="Command Injection Screenshot" />
         </div>
       </article>
 
       <article class="lab">
-        <h4><i class="fas fa-folder-open"></i> Directory Traversal</h4>
-        <p><strong>Summary:</strong> Accessed restricted files via <code>../</code> traversal</p>
+        <h4><i class="fas fa-folder-open"></i> Pawned Dancing Machine on HacktheBox</h4>
+        <p><strong>Summary:</strong> connected FTP, SMB, Telnet, Rsync and RDP anonymously. Use Nmap to identify open ports. connected to a MongoDB server.</p>
         <div class="lab-images">
           <img src="https://marcos-solo.github.io/images/screen4.png" alt="Directory Traversal Screenshot" />
         </div>
       </article>
 
       <article class="lab">
-        <h4><i class="fas fa-user-secret"></i> Broken Authentication Exploit</h4>
-        <p><strong>Summary:</strong> Gained unauthorized access using session ID manipulation</p>
+        <h4><i class="fas fa-user-secret"></i> pawned Redeemer Machine on Hackthebox</h4>
+        <p><strong>Summary:</strong> connected FTP, SMB, Telnet, Rsync and RDP anonymously. Use Nmap to identify open ports. connected to a MongoDB server.</p>
         <div class="lab-images">
           <img src="https://marcos-solo.github.io/images/screen5.png" alt="Broken Authentication Screenshot" />         
         </div>
       </article>
 
       <article class="lab">
-        <h4><i class="fas fa-user-shield"></i> Pawned the Meow Machine</h4>
+        <h4><i class="fas fa-user-shield"></i> Pawned the Meow Machine on Hackthebox</h4>
         <p><strong>Summary:</strong> connected FTP, SMB, Telnet, Rsync and RDP anonymously. Use Nmap to identify open ports. connected to a MongoDB server.</p>
         <div class="lab-images">
           <img src="https://marcos-solo.github.io/images/screen6.png" alt="Privilege Escalation Screenshot 1" /><br>
-          <img src="https://marcos-solo.github.io/images/screen5.png" alt="Broken Authentication Screenshot" />  <br>
-          <img src="https://marcos-solo.github.io/images/screen6a.png" alt="Privilege Escalation Screenshot 2" /><br>
-          <img src="https://marcos-solo.github.io/images/screen3.png" alt="Command Injection Screenshot" />
+    
         </div>
       </article>
 
