--- a/labs.html
+++ b/labs.html
@@ -144,24 +144,27 @@
         <article class="lab">
           <h4><i class="fab fa-windows"></i> Windows Fundamentals: User Management</h4>
           <p><strong>Objective:</strong> Understand and manage user accounts and groups in Windows environments</p>
-          <p><strong>Approach:</strong> Explored user permissions, the `net user` command, and group policies using Command Prompt and PowerShell</p>
+          <p><strong>Approach:</strong> Explored user permissions, the <code>net user</code> command, and group policies using Command Prompt and PowerShell</p>
           <p><strong>Tools:</strong> Windows Command Line, PowerShell, Hack The Box Academy</p>
           <div class="lab-images">
             <img src="https://marcos-solo.github.io/images/windows-user-management.png" alt="Windows User Management Screenshot" />
           </div>
           <p><strong>Lessons Learned:</strong> The importance of least privilege, proper account enumeration, and recognizing common misconfigurations in user and group management</p>
+          <p><strong>Certificate:</strong> <a href="https://academy.hackthebox.com/achievement/1917487/49" target="_blank">View HTB Windows Fundamentals Certificate</a></p>
         </article>
         
         <article class="lab">
           <h4><i class="fab fa-linux"></i> Linux Fundamentals: File Permissions and Ownership</h4>
           <p><strong>Objective:</strong> Understand file and directory permissions in Linux systems</p>
-          <p><strong>Approach:</strong> Practiced using `ls -l`, `chmod`, `chown`, and symbolic vs numeric permissions</p>
+          <p><strong>Approach:</strong> Practiced using <code>ls -l</code>, <code>chmod</code>, <code>chown</code>, and symbolic vs numeric permissions</p>
           <p><strong>Tools:</strong> Linux Terminal, Hack The Box Pwnbox</p>
           <div class="lab-images">
             <img src="https://marcos-solo.github.io/images/linux-permissions.png" alt="Linux File Permissions Screenshot" />
           </div>
           <p><strong>Lessons Learned:</strong> How Linux enforces access control via user/group/other permissions, and how misconfigurations can lead to privilege escalation</p>
+          <p><strong>Certificate:</strong> <a href="https://academy.hackthebox.com/achievement/1917487/18" target="_blank">View HTB Linux Fundamentals Certificate</a></p>
         </article>
+
 
 
       <article class="lab">
