--- a/labs.html
+++ b/labs.html
@@ -225,10 +225,10 @@
       </article>
 
       <article class="lab">
-        <h4><i class="fas fa-user-shield"></i> Privilege Escalation (2)</h4>
-        <p><strong>Summary:</strong> Additional case of privilege escalation via misconfigured permissions</p>
+        <h4><i class="fas fa-user-shield"></i> Performed Defensive Security On Tryhackme</h4>
+        <p><strong>Summary:</strong> Practiced how soc analyst works with siem practices</p>
         <div class="lab-images">
-          <img src="https://marcos-solo.github.io/images/screen6a.png" alt="Privilege Escalation Screenshot 2" />
+          <img src="https://marcos-solo.github.io/images/defensive.png" alt="Privilege Escalation Screenshot 2" />
         </div>
       </article>
 
