--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
     <h2>Contact Me</h2>
     <p><strong>Email:</strong> <a href="mailto:solomonmarcos34@gmail.com">solomonmarcos34@gmail.com</a></p>
     <p><strong>Phone:</strong> +254 0741840839</p>
-    <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/janedoe" target="_blank">linkedin.com/in/marcos-solomon</a></p>
+    <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/marcos-solomon" target="_blank">linkedin.com/in/marcos-solomon</a></p>
     <p><strong>GitHub:</strong> <a href="https://github.com/marcos-solo" target="_blank">github.com/marcos-solo</a></p>
   </section>
 
