--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <a href="resume.html" class="btn">View My Resume</a>
 
       <div class="socials">
-        <a href="https://github.com/marcos-solomon" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://github.com/marcos-solo" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://linkedin.com/in/marcos-solomon" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="mailto:marcos@example.com"><i class="fas fa-envelope"></i></a>
       </div>
