--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <div class="socials">
         <a href="https://github.com/marcos-solo" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://linkedin.com/in/marcos-solomon" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="mailto:marcos@example.com"><i class="fas fa-envelope"></i></a>
+        <a href="mailto:solomonmarcos34@gmail.com"><i class="fas fa-envelope"></i></a>
       </div>
     </div>
   </section>
