--- a/labs.html
+++ b/labs.html
@@ -174,7 +174,7 @@
         <p><strong>Approach:</strong> Explored user permissions, the <code>net user</code> command, and group policies using Command Prompt and PowerShell</p>
         <p><strong>Tools:</strong> Windows Command Line, PowerShell, Hack The Box Academy</p>
         <div class="lab-images">
-          <img src="https://marcos-solo.github.io/images/windows-user-management.png" alt="Windows User Management Screenshot" />
+          <img src="https://marcos-solo.github.io/images/window2.png" alt="Windows User Management Screenshot" />
         </div>
         <p><strong>Lessons Learned:</strong> The importance of least privilege, proper account enumeration, and recognizing common misconfigurations in user and group management</p>
         <p><strong>Certificate:</strong> <a href="https://academy.hackthebox.com/achievement/1917487/49" target="_blank">View HTB Windows Fundamentals Certificate</a></p>
@@ -186,7 +186,7 @@
         <p><strong>Approach:</strong> Practiced using <code>ls -l</code>, <code>chmod</code>, <code>chown</code>, and symbolic vs numeric permissions</p>
         <p><strong>Tools:</strong> Linux Terminal, Hack The Box Pwnbox</p>
         <div class="lab-images">
-          <img src="https://marcos-solo.github.io/images/linux-permissions.png" alt="Linux File Permissions Screenshot" />
+          <img src="https://marcos-solo.github.io/images/linux1.png" alt="Linux File Permissions Screenshot" />
         </div>
         <p><strong>Lessons Learned:</strong> How Linux enforces access control via user/group/other permissions, and how misconfigurations can lead to privilege escalation</p>
         <p><strong>Certificate:</strong> <a href="https://academy.hackthebox.com/achievement/1917487/18" target="_blank">View HTB Linux Fundamentals Certificate</a></p>
